--- a/cs499mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,35 @@
     android:layout_height="match_parent"
     tools:context="cs499app.cs499mobileapp.MainActivity">
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        app:tabIndicatorColor="@color/colorPrimary"
+        app:tabSelectedTextColor="@color/Gold"
+        app:tabIndicatorHeight="2dp"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="@color/White"
+        app:tabMode="scrollable"/>
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.PagerTitleStrip
-            android:id="@+id/pager_title_strip_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="#33b5e5"
-            android:textColor="#fff"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp" />
-
+        <!--<android.support.v4.view.PagerTitleStrip-->
+            <!--android:id="@+id/pager_title_strip_activity"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="top"-->
+            <!--android:background="#33b5e5"-->
+            <!--android:textColor="#fff"-->
+            <!--android:paddingTop="4dp"-->
+            <!--android:paddingBottom="4dp" />-->
     </android.support.v4.view.ViewPager>
+
 
     <include layout="@layout/content_main" />
 
