--- a/cs499mobileapp/app/src/main/res/layout/fragment_inner.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_inner.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     tools:context="cs499app.cs499mobileapp.view.InnerFragment">
 
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
@@ -17,7 +18,8 @@
             android:background="#33b5e5"
             android:textColor="#fff"
             android:paddingTop="4dp"
-            android:paddingBottom="4dp" />
+            android:paddingBottom="4dp"
+            />
 
     </android.support.v4.view.ViewPager>
 
