--- a/cs499mobileapp/app/src/main/res/values/styles.xml
+++ b/cs499mobileapp/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="CustomToolbarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/CadetBlue</item>
+        <item name="colorPrimary">@color/Purple</item>
+        <item name="colorPrimaryDark">@color/Purple</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
