--- a/cs499mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,13 @@
             <!--android:paddingTop="4dp"-->
             <!--android:paddingBottom="4dp" />-->
         </android.support.v4.view.ViewPager>
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
     <!--<include layout="@layout/content_main" />-->
+
+
+
+
 
 </android.support.design.widget.CoordinatorLayout>
