--- a/cs499mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_gravity="top"
             android:theme="@style/CustomToolbarTheme"
-
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            >
         </android.support.v7.widget.Toolbar>
 
 
@@ -31,13 +30,11 @@
             android:layout_below="@id/customized_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabGravity="center"
+            app:tabGravity="fill"
             app:tabMaxWidth="0dp"
-            app:tabIndicatorColor="@color/colorPrimary"
-            app:tabSelectedTextColor="@color/Gold"
-            app:tabIndicatorHeight="2dp"
-            android:background="@color/colorPrimary"
-            app:tabTextColor="@color/White"
+            app:tabIndicatorColor="@color/Gold"
+            app:tabIndicatorHeight="4dp"
+            android:background="@color/DeepSkyBlue"
             app:tabMode="fixed">
 
         </android.support.design.widget.TabLayout>
