--- a/cs499mobileapp/app/src/main/res/values/styles.xml
+++ b/cs499mobileapp/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -14,10 +15,7 @@
     </style>
 
     <style name="CustomToolbarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:background">@color/CadetBlue</item>
-        <item name="colorPrimary">@color/Purple</item>
-        <item name="colorPrimaryDark">@color/Purple</item>
+        <item name="android:background">@color/colorPrimary</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
