--- a/cs499mobileapp/app/src/main/res/layout/activity_listview.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_listview.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+        <ListView
+            android:id="@+id/listview_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></ListView>
 
         <ImageView
             android:id="@+id/listview_icon"
