--- a/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cs499app.cs499mobileapp.view.LibraryFragment">
 
-    <android.support.v7.widget.ListViewCompat
+    <ListView
+        android:id="@+id/listview_playlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.ListViewCompat>
+        android:layout_height="match_parent"></ListView>
+
 </LinearLayout>
