--- a/cs499mobileapp/app/src/main/res/layout/navigation_drawer.xml
+++ b/cs499mobileapp/app/src/main/res/layout/navigation_drawer.xml
@@ -1,29 +1,29 @@
 <android.support.v4.widget.DrawerLayout
-    xmlns:Android="http://schemas.android.com/apk/res/android"
-    Android:id="@+id/navigation_drawer"
-    Android:layout_width="match_parent"
-    Android:layout_height="match_parent"
-    Android:fitsSystemWindows="true">
-    <LinearLayout
-        Android:layout_width="match_parent"
-        Android:layout_height="match_parent">
-        <Android.support.v7.widget.Toolbar
-            xmlns:Android="http://schemas.Android.com/apk/res/Android"
-            xmlns:app="http://schemas.Android.com/apk/res-auto"
-            Android:id="@+id/toolbar"
-            Android:layout_width="match_parent"
-            Android:layout_height="wrap_content"
-            Android:background="#ff6d7fe2"
-            app:contentInsetEnd="0dp"
-            app:contentInsetStart="0dp"
-            ></Android.support.v7.widget.Toolbar>
-    </LinearLayout>
-    <ListView Android:id="@+id/left_drawer"
-        Android:layout_width="240dp"
-        Android:layout_height="match_parent"
-        Android:layout_gravity="start"
-        Android:choiceMode="singleChoice"
-        Android:divider="@color/Indigo"
-        Android:dividerHeight="0dp"
-        Android:background="@color/Gold"/>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/navigation_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+    <FrameLayout
+        android:id="@+id/navigation_content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!-- android:layout_gravity="start" tells DrawerLayout to treat
+         this as a sliding drawer on the left side for left-to-right
+         languages and on the right side for right-to-left languages.
+         The drawer is given a fixed width in dp and extends the full height of
+         the container. A solid background is used for contrast
+         with the content view. -->
+    <ListView
+        android:id="@+id/navigation_drawer_listview"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
 </android.support.v4.widget.DrawerLayout>
