--- a/cs499mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,24 @@
     android:layout_height="match_parent"
     tools:context="cs499app.cs499mobileapp.MainActivity">
 
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/navigation_drawer_layout"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/navigation_drawer_header"
+            app:menu="@menu/menu_navigation_drawer" />
+
+    </android.support.v4.widget.DrawerLayout>
+
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,8 +36,10 @@
             app:contentInsetEnd="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="10dp"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_gravity="top"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:theme="@style/CustomToolbarTheme"
             >
         </android.support.v7.widget.Toolbar>
@@ -62,8 +82,6 @@
     </android.support.v7.widget.LinearLayoutCompat>
 
     <!--<include layout="@layout/content_main" />-->
-
-
 
 
 
