Fixed Navigation drawer and implemented switch UI

--- a/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/player_fragment.xml
@@ -43,8 +43,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             CircularSeekBar:circle_stroke_width="10dp"
-            CircularSeekBar:circle_color="@color/DarkSeaGreen"
-            CircularSeekBar:circle_progress_color="@color/Indigo"
+            CircularSeekBar:circle_color="@color/LightGray"
+            CircularSeekBar:circle_progress_color="@color/OrangeRed"
             CircularSeekBar:progress="25"
             CircularSeekBar:max="100"
             CircularSeekBar:pointer_alpha_ontouch="100"
