--- a/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/stationlist_listview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
