--- a/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
+++ b/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
@@ -10,6 +10,7 @@
     android:orientation="horizontal">
         <ImageView
             android:id="@+id/playlist_listview_image"
+            android:descendantFocusability="blocksDescendants"
             android:adjustViewBounds="true"
             android:layout_weight="20"
             android:src="@drawable/radio_demo"
@@ -30,7 +31,8 @@
         <LinearLayout
             android:layout_weight="60"
             android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants">
         <TextView
             android:id="@+id/playlist_listview_textview"
             android:layout_marginLeft="30dp"
