--- a/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
+++ b/cs499mobileapp/app/src/main/res/layout/playlist_listview_items.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants">
         <ImageView
             android:id="@+id/playlist_listview_image"
-            android:descendantFocusability="blocksDescendants"
             android:adjustViewBounds="true"
             android:layout_weight="20"
             android:src="@drawable/radio_demo"
@@ -31,8 +32,7 @@
         <LinearLayout
             android:layout_weight="60"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:descendantFocusability="blocksDescendants">
+            android:layout_height="match_parent">
         <TextView
             android:id="@+id/playlist_listview_textview"
             android:layout_marginLeft="30dp"
