--- a/cs499mobileapp/app/src/main/res/layout/activity_main.xml
+++ b/cs499mobileapp/app/src/main/res/layout/activity_main.xml
@@ -51,11 +51,30 @@
             >
         </android.support.v7.widget.Toolbar>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/fragment_container"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
             android:layout_below="@id/customized_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMaxWidth="0dp"
+            app:tabIndicatorColor="@color/Gold"
+            app:tabIndicatorHeight="2dp"
+            android:background="@color/DeepSkyBlue"
+            app:tabMode="fixed">
+
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/main_pager"
+            android:layout_below="@id/customized_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="fill"
+            >
+
+        </android.support.v4.view.ViewPager>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
