--- a/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/stationlist_listview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="90">
     </ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="10">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_station_float_button"
+            android:tint="@color/white"
+            app:backgroundTint="@color/DeepSkyBlue"
+            android:src="@drawable/add_cross"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|center"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"/>
+    </LinearLayout>
 
 </LinearLayout>
