--- a/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
@@ -27,7 +27,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="bottom|center"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            app:pressedTranslationZ="2dp"/>
     </LinearLayout>
 
 
