--- a/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/library_fragment"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,26 +11,28 @@
     <ListView
         android:id="@+id/listview_playlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="90"></ListView>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="10">
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="5dp"
+        android:layout_weight="9">
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/add_playlist_float_button"
             android:tint="@color/white"
             app:backgroundTint="@color/DeepSkyBlue"
             android:src="@drawable/add_cross"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|center"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="6dp"
+            android:layout_centerHorizontal="true"
             app:pressedTranslationZ="2dp"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
