--- a/cs499mobileapp/app/src/main/res/layout/setting_toggle_item.xml
+++ b/cs499mobileapp/app/src/main/res/layout/setting_toggle_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <Switch
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/SettingSwitchStyle"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 </LinearLayout>
