--- a/cs499mobileapp/app/src/main/res/layout/fragment_playlist_dialog.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_playlist_dialog.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:minWidth="300dp"
+    android:padding="10dp"
     >
 
     <TextView
-        android:text="Add New Station"
+        android:id="@+id/playlist_dialog_fragment_title"
+        android:text="Title"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -19,32 +21,13 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Station Title:"
-            android:inputType="textMultiLine"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <EditText
-            android:id="@+id/addstationtitle_edittext"
-            android:minLines="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:text="Station URL:"
+            android:text="Playlist Title:"
             android:maxLines="1"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <EditText
-            android:id="@+id/addstationurl_edittext"
+            android:id="@+id/addplaylist_edittext"
             android:inputType="textMultiLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,13 +40,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/addstation_addbutton"
+            android:id="@+id/addplaylist_addbutton"
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
             android:text="Add"/>
         <Button
-            android:id="@+id/addstation_cancelbutton"
+            android:id="@+id/addplaylist_cancelbutton"
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
