--- a/cs499mobileapp/app/src/main/res/layout/fragment_playlist_dialog.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_playlist_dialog.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/playlist_dialog_fragment_title"
-        android:text="Title"
+        android:text="dialogTitle"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -21,13 +21,13 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:text="Playlist Title:"
+            android:text="TITLE:"
             android:maxLines="1"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <EditText
-            android:id="@+id/addplaylist_edittext"
+            android:id="@+id/dialog_playlist_title_edittext"
             android:inputType="textMultiLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,13 +40,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/addplaylist_addbutton"
+            android:id="@+id/dialog_playlist_confirm_button"
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
-            android:text="Add"/>
+            android:text="confirmButton"/>
         <Button
-            android:id="@+id/addplaylist_cancelbutton"
+            android:id="@+id/dialog_playlist_cancelbutton"
             android:layout_width="0dp"
             android:layout_weight="50"
             android:layout_height="wrap_content"
