--- a/cs499mobileapp/app/src/main/res/values/styles.xml
+++ b/cs499mobileapp/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:statusBarColor">@color/colorPrimary</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor">#00a9ff</item>
+        <item name="colorPrimary">#00a9ff</item>
+        <item name="colorPrimaryDark">#00a9ff</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -15,7 +15,7 @@
     </style>
 
     <style name="CustomToolbarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">#00a9ff</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:textColorSecondary">@color/white</item>
 
