--- a/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
+++ b/cs499mobileapp/app/src/main/res/layout/fragment_station_list.xml
@@ -11,11 +11,12 @@
         android:layout_weight="10"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/station_view_playlist_title_header"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="95"
             android:gravity="center"
-            android:text="PLAYLIST NAME HERE"/>
+            android:textSize="40sp"/>
 
         <View
             android:layout_width="fill_parent"
