--- a/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
+++ b/cs499mobileapp/app/src/main/res/layout/library_fragment.xml
@@ -8,11 +8,31 @@
     android:layout_height="match_parent"
     tools:context="cs499app.cs499mobileapp.view.LibraryFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="95"
+            android:gravity="center"
+            android:text="LIBRARY"
+            android:textSize="40sp"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_weight="5"
+            android:background="@color/DeepSkyBlue"/>
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listview_playlist"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="90"></ListView>
+        android:layout_weight="80"></ListView>
 
     <RelativeLayout
         android:layout_width="match_parent"
